--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 ## YAML Template.
 language: java
 
-os: windows
+#Install dependencies
+install:
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+
 
 jdk:
-  - openjdk7
-#  - oraclejdk8
+#  - openjdk7
+  - oraclejdk8
 
 # Turning email notifications off
 notifications:
