--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 ## YAML Template.
 language: java
 
+os: windows
+
 #Install dependencies
 install:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
